Changed layout from full landscape to vertical. Added color scheme. Fixed most layout issues but broke mobile view.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,14 @@
 body {
     margin: 0 0;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex: 1;
-    flex-flow: column wrap;
+    font-family: sans-serif;
 }
 
 ul {
     list-style-type: none;
+}
+
+.content {
+    margin: 0 20em;
 }
 
 .header {
@@ -16,15 +17,15 @@ ul {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 0 5%;
-    background-color: rgb(19, 19, 19);
+    padding: 0 2em;
+    background-color: rgb(104, 0, 0);
 }
 
 .logo {
     font-family: sans-serif;
-    font-weight: 700;
-    font-size: 2em;
-    color: rgb(207, 0, 0);
+    font-weight: 100;
+    font-size: 26px;
+    color: rgb(245, 245, 245);
 }
 
 .header-links {
@@ -32,30 +33,28 @@ ul {
     flex: 1;
     justify-content: end;
     gap: 2em;
-    color: rgb(223, 223, 223);
-    border: 2px solid red;
+    color: rgb(245, 245, 245);
 }
 
 .section-one {
-    height: 40vh;
+    min-height: 40vh;
     display: flex;
     flex: 1;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 0 5%;
-    background-color: rgb(34, 34, 34);
+    padding: 0 2em;
+    background-color: rgb(235, 235, 235);
 }
 
 .section-one-left {
     height: 40vh;
-    color: white;
+    color: rgb(31, 31, 31);
     display: flex;
     flex: 1;
     flex-direction: column;
     justify-content: center;
     min-width: fit-content;
-    border: 2px solid red;
 }
 
 .section-one-right {
@@ -64,22 +63,21 @@ ul {
     flex: 1;
     justify-content: flex-end;
     align-items: center;
-    border: 2px solid red;
 }
 
 #image-section-one {
     height: 50%;
     width: auto;
-    border: 2px solid red;
+    border-radius: 10px;
 }
 
 .sign-up-button {
     width: fit-content;
     padding: 5px 20px;
-    background-color: rgb(165, 0, 0);
+    background-color: rgb(104, 0, 0);
     border: none;
     border-radius: 5px;
-    color: white;
+    color: rgb(245, 245, 245);
 }
 
 .section-two {
@@ -87,17 +85,15 @@ ul {
     flex: 1;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    max-width: 100%;
-    background-color: rgb(80, 80, 80);
+    padding: 1em 0;
+    color: rgb(31, 31, 31);
+    background-color: rgb(218, 218, 218);
 }
 
 .card-container {
     display: flex;
     flex: 1;
-    justify-content: center;
     flex-wrap: wrap;
-    padding: 0 5%;
     gap: 50px;
 }
 
@@ -110,4 +106,85 @@ ul {
     height: 200px;
     width: auto;
     border-radius: 10px;
+}
+
+.section-three {
+    display: flex;
+    flex: 1;
+    min-height: 400px;
+    justify-content: center;
+    align-items: center;
+    color: rgb(31, 31, 31);
+    background-color: rgb(235, 235, 235);
+}
+
+#quote-container {
+    margin: 0 5%;
+    max-width: 50%;
+    font-size: 36px;
+    font-style: italic;
+}
+
+#quote-author {
+    text-align: end;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.section-four {
+    display: flex;
+    flex: 1;
+    min-height: 300px;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5em;
+    background-color: rgb(218, 218, 218);
+}
+
+.sign-up-container {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 3em;
+    background-color: rgb(104, 0, 0);
+    border-radius: 1em;
+}
+
+.sign-up-container .sign-up-button {
+    background-color: transparent;
+    border: 2px solid white;
+    color: rgb(245, 245, 245);
+}
+
+.section-four-left {
+    padding: 15px;
+    min-width: fit-content;
+}
+
+.section-four-left #p1 {
+    color: rgb(245, 245, 245);
+    font-size: 24px;
+    margin-top: 0;
+    margin-bottom: -5px;
+}
+
+.section-four-left #p2 {
+    color: rgb(245, 245, 245);
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+.footer {
+    min-height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(104, 0, 0);
+}
+
+.footer p {
+    font-size: 12px;
+    color: rgb(245, 245, 245);
 }
